# RRBotPP

./: .gitmodules  CMakeLists.txt  README.md
src/: cache.cpp  cache.h  events.cpp  events.h  main.cpp
src/data/: constants.h  credentials.cpp  credentials.h  responses.h
src/database/: mongomanager.cpp  mongomanager.h
src/database/entities/: dbban.cpp  dbban.h  dbchill.cpp  dbchill.h  dbgang.cpp  dbgang.h  dbobject.h  dbpot.cpp  dbpot.h  dbuser.cpp  dbuser.h
src/database/entities/config/: dbconfigchannels.cpp  dbconfigchannels.h  dbconfigglobal.cpp  dbconfigglobal.h  dbconfigmisc.cpp  dbconfigmisc.h  dbconfigranks.cpp  dbconfigranks.h  dbconfigroles.cpp  dbconfigroles.h
src/entities/: achievement.h  embed.cpp  embed.h  sizedcache.cpp  sizedcache.h
src/entities/goods/: ammo.h  collectible.h  consumable.h  crate.cpp  crate.h  item.h  perk.h  tool.h  weapon.h
src/modules/: administration.cpp  administration.h  botowner.cpp  botowner.h  config.cpp  config.h  crime.cpp  crime.h  economy.cpp  economy.h  fun.cpp  fun.h  gambling.cpp  gambling.h  gangs.cpp  gangs.h  general.cpp  general.h  goods.cpp  goods.h  investments.cpp  investments.h  moderation.cpp  moderation.h  prestige.cpp  prestige.h  tasks.cpp  tasks.h  weapons.cpp  weapons.h
src/paginators/: leaderboardpaginator.cpp  leaderboardpaginator.h
src/readers/: cashtypereader.cpp  cashtypereader.h  rrguildmembertypereader.cpp  rrguildmembertypereader.h
src/systems/: eventsystem.cpp  eventsystem.h  filtersystem.cpp  filtersystem.h  itemsystem.cpp  itemsystem.h  loggingsystem.cpp  loggingsystem.h  monitorsystem.cpp  monitorsystem.h
src/utils/: dpp.cpp  dpp.h  ld.cpp  ld.h  random.h  ranges.h  regex.h  rrutils.cpp  rrutils.h  stringhash.h  strings.cpp  strings.h  timestamp.cpp  timestamp.h
src/utils/views_concat/: concat.hpp  utils.hpp
